[package]
name = "bao_bin"
version = "0.10.1"
authors = ["Jack O'Connor"]
description = "the command line utility that's part of the bao crate"
license = "CC0-1.0 OR Apache-2.0"
repository = "https://github.com/oconnor663/bao"
readme = "../README.md"
edition = "2018"

[[bin]]
name = "bao"
path = "src/main.rs"

[features]
default = ["rayon"]
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]

[dependencies]
arrayref = "0.3.5"
bao = { path = "..", version = "0.10" }
blake3 = "0.3.0"
docopt = "1.1.0"
failure = "0.1.5"
hex = "0.4.0"
memmap = "0.7.0"
serde = { version = "1.0.97", features = ["derive"] }

[dev-dependencies]
duct = "0.13.0"
rand = "0.7.0"
tempfile = "3.1.0"
