[package]
name = "bao_bin"
version = "0.13.0"
authors = ["Jack O'Connor"]
description = "the command line utility that's part of the bao crate"
license = "CC0-1.0 OR Apache-2.0"
repository = "https://github.com/oconnor663/bao"
readme = "../README.md"
edition = "2021"

[[bin]]
name = "bao"
path = "src/main.rs"

[features]
default = ["rayon"]
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]

[dependencies]
anyhow = "1.0.95"
assert_cmd = "2.0.16"
bao = { path = "..", version = "0.13" }
blake3 = "1.0.0"
docopt = "1.1.0"
hex = "0.4.0"
memmap2 = "0.9.5"
serde = { version = "1.0.97", features = ["derive"] }

[dev-dependencies]
duct = "0.13.0"
rand = "0.9"
tempfile = "3.1.0"
